syntax = "proto3";

package kdrive;

service KdriveService {
  rpc IsAuthenticated(Empty) returns (AuthStatus);
  rpc StartInitialAuthFlow(Empty) returns (AuthUrlResponse);
  rpc ContinueInitialAuthFlow(Empty) returns (AuthFlowResult);
}

message Empty {}

message AuthStatus {
  bool is_authenticated = 1;
}

message AuthUrlResponse {
  string auth_url = 1;
}

message AuthFlowResult {
  bool success = 1;
}